# fichas_tecnicas_diana

./: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 49d8b08bd258_migracion_inicial_supabase.py  98f883ddcb8e_migracion_inicial.py  e439c6b3b436_add_realizado_por_to_mantenimiento.py
api/: index.py
app/: main.py
app/api/router/: __init__.py  areas.py  auth.py  clasificaciones.py  equipos.py  fotos.py  historial.py  mantenimientos.py  reportes.py  repuestos.py  usuarios.py
app/core/: __init__.py  cloudinary_config.py  config.py  db.py  dependencies.py  security.py  storage.py
app/models/: __init__.py  area.py  clasificacion.py  enums.py  equipo.py  equipo_repuesto.py  foto.py  historial_cambio.py  mantenimiento.py  mantenimiento_repuesto.py  usuario.py
app/repositories/: __init__.py  area.py  clasificacion.py  equipo.py  equipo_repuesto.py  foto.py  historial.py  mantenimiento.py  usuario.py
app/schemas/: __init__.py  area.py  auth.py  clasificacion.py  equipo.py  equipo_repuesto.py  filtros.py  foto.py  historial.py  mantenimiento.py  usuario.py
app/services/: __init__.py  area.py  auth.py  clasificacion.py  equipo.py  foto.py  historial.py  mantenimiento.py  reporte_excel.py  reporte_pdf.py  reporte_qr.py  usuario.py
