[project]
name = "diana-ficha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.2",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "qrcode[pil]>=8.2",
    "reportlab>=4.5.1",
    "sqlmodel>=0.0.38",
]
